Fix chart on smaller screens

--- a/src/common/components/market-chart/_index.scss
+++ b/src/common/components/market-chart/_index.scss
@@ -18,4 +18,10 @@
 
 .DepthChart {
   width: 106%;
+  @media (max-width: $sm-break) {
+    width: 156%;
+  }
+  @media (max-width: 570px) {
+    width: 100%;
+  }
 }
